--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
               <div class="team-content glass">
                 <div class="team-header">
                 <img src="avatar4.jpg" alt="" class="team-avatar">
-                <h4>Aditya Bansole</h4> 
+                <h4>Aditya Bansod</h4> 
             </div>
                 <h5 class="team-role" style="color: #69ffc1;">Video Editor.</h5>
                 <p>Skilled Video Editor with expertise in creating engaging, high-quality videos that deliver impactful and elevate brand presence.</p>
