--- a/index.html
+++ b/index.html
@@ -625,6 +625,27 @@
         </div>
     </section>
 
+    <script>
+      const form = document.querySelector("form");
+      form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+      const response = await fetch(form.action, {
+      method: form.method,
+      body: data,
+      headers: { Accept: "application/json" },
+  });
+
+  if (response.ok) {
+    alert("✅ Message sent successfully!");
+    form.reset();
+  } else {
+    alert("❌ Something went wrong. Try again later.");
+  }
+});
+</script>
+
+
     <!-- Footer -->
     <footer>
         <div class="footer-content">
