--- a/index.html
+++ b/index.html
@@ -593,6 +593,7 @@
                 </div>
             </div>
             
+            
             <div class="contact-form glass">
   <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
     <!-- Web3Forms Access Key -->
@@ -625,15 +626,19 @@
         </div>
     </section>
 
-    <script>
-      const form = document.querySelector("form");
-      form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const data = new FormData(form);
-      const response = await fetch(form.action, {
-      method: form.method,
-      body: data,
-      headers: { Accept: "application/json" },
+   <script>
+const form = document.getElementById("contactForm");
+
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const data = new FormData(form);
+  const response = await fetch(form.action, {
+    method: form.method,
+    body: data,
+    headers: {
+      Accept: "application/json"
+    }
   });
 
   if (response.ok) {
