--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
             <div class="contact-form glass">
   <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
     <!-- Web3Forms Access Key -->
-    <input type="hidden" name="access_key" value="{{WEB3_ACCESS_KEY}}">
+    <input type="hidden" name="access_key" value="eb0f60c1-6b3c-4a90-9f39-38935b0efe55">
 
     
     <!-- Optional: Redirect after success -->
