--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             
             
             <div class="contact-form glass">
-  <form id="contactForm" action="https://formsubmit.co/el/cufadi" method="POST">
+  <form data-aos="fade-up" action="https://formsubmit.co/mk7492000@gmail.com" method="POST">
     <!-- Web3Forms Access Key -->
     <!-- <input type="hidden" name="access_key" value="eb0f60c1-6b3c-4a90-9f39-38935b0efe55"> -->
 
@@ -618,6 +618,10 @@
     <div class="form-group">
       <textarea name="message" rows="5" placeholder=" Message... " required></textarea>
     </div>
+
+    <input type="hidden" name="_captcha" value="false"> <!-- Captcha off -->
+        <input type="hidden" name="_next" value="https://yourwebsite.com/pf-10q-page.html">
+
 
     <button type="submit" class="submit-btn">Send Message</button>
   </form>
