--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             
             
             <div class="contact-form glass">
-  <form data-aos="fade-up" action="https://formsubmit.co/mk7492000@gmail.com" method="POST">
+  <form data-aos="fade-up" action="https://formsubmit.co/info.adwizdigitalindia@gmail.com" method="POST">
     <!-- Web3Forms Access Key -->
     <!-- <input type="hidden" name="access_key" value="eb0f60c1-6b3c-4a90-9f39-38935b0efe55"> -->
 
