--- a/index.html
+++ b/index.html
@@ -596,40 +596,43 @@
             
             <div class="contact-form glass">
   <form data-aos="fade-up" action="https://formsubmit.co/info.adwizdigitalindia@gmail.com" method="POST">
-    <!-- Web3Forms Access Key -->
-    <!-- <input type="hidden" name="access_key" value="eb0f60c1-6b3c-4a90-9f39-38935b0efe55"> -->
-
     
-    <!-- Optional: Redirect after success -->
-    <!-- <input type="hidden" name="redirect" value="https://yourdomain.com/thankyou.html">  -->
+    <!-- Disable Captcha -->
+    <input type="hidden" name="_captcha" value="false">
 
+    <!-- Redirect After Submission -->
+    <input type="hidden" name="_next" value="https://yourwebsite.com/pf-10q-page.html">
+
+    <!-- Form Fields -->
     <div class="form-group">
-      <input type="text" name="name" placeholder=" Name " required>
+      <input type="text" name="name" placeholder="Name" required>
     </div>
 
     <div class="form-group">
-      <input type="email" name="email" placeholder=" Email " required>
+      <input type="email" name="email" placeholder="Email" required>
     </div>
 
     <div class="form-group">
-      <input type="text" name="subject" placeholder=" Subject " required>
+      <input type="text" name="subject" placeholder="Subject" required>
     </div>
 
     <div class="form-group">
-      <textarea name="message" rows="5" placeholder=" Message... " required></textarea>
+      <textarea name="message" rows="5" placeholder="Message..." required></textarea>
     </div>
-
-    <input type="hidden" name="_captcha" value="false"> <!-- Captcha off -->
-        <input type="hidden" name="_next" value="https://yourwebsite.com/pf-10q-page.html">
-
 
     <button type="submit" class="submit-btn">Send Message</button>
   </form>
 </div>
 
 
+
         </div>
     </section>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
   
 
