--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
     <input type="hidden" name="_captcha" value="false">
 
     <!-- Redirect After Submission -->
-    <input type="hidden" name="_next" value="https://yourwebsite.com/pf-10q-page.html">
+    <input type="hidden" name="_next" value="https://adwiz.wuaze.com/pf-10q-page.html">
 
     <!-- Form Fields -->
     <div class="form-group">
