--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
     <input type="hidden" name="_captcha" value="false">
 
     <!-- Redirect Page -->
-    <input type="hidden" name="_next" value="https://adwiz.wuaze.com/thankyou.html">
+    <input type="hidden" name="_next" value="https://yourwebsite.com/pf-10q-page.html">
 
     <!-- Form Fields -->
     <div class="form-group">
@@ -609,6 +609,8 @@
     </div>
 
     <div class="form-group">
+
+
       <input type="email" name="email" placeholder="Email" required>
     </div>
 
