--- a/index.html
+++ b/index.html
@@ -614,9 +614,9 @@
       <input type="email" name="email" placeholder="Email" required>
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       <input type="text" name="subject" placeholder="Subject" required>
-    </div>
+    </div> -->
 
     <div class="form-group">
       <textarea name="message" rows="5" placeholder="Message..." required></textarea>
