--- a/index.html
+++ b/index.html
@@ -614,9 +614,9 @@
       <input type="email" name="email" placeholder="Email" required>
     </div>
 
-    <!-- <div class="form-group">
-      <input type="text" name="subject" placeholder="Subject" required>
-    </div> -->
+    <div class="form-group">
+      <input type="text" name="number" placeholder="Number" required>
+    </div>
 
     <div class="form-group">
       <textarea name="message" rows="5" placeholder="Message..." required></textarea>
@@ -626,11 +626,10 @@
   </form>
 </div>
 
-
-
-
-        </div>
+</div>
     </section>
+
+
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
