--- a/index.html
+++ b/index.html
@@ -609,13 +609,11 @@
     </div>
 
     <div class="form-group">
-
-
-      <input type="email" name="email" placeholder="Email" required>
+      <input type="email" name="number" placeholder="Number" required>
     </div>
 
     <div class="form-group">
-      <input type="text" name="number" placeholder="Number" required>
+      <input type="text" name="email" placeholder="Email" required>
     </div>
 
     <div class="form-group">
