--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <div class="hexagon-inner glass">
                     <div class="hexagon-icon">🛡️</div>
                     <h4>Social Media Marketing</h4>
-                    <p><a href="#" class="btn btn-outline-warning aa" >See</a></p>
+                    <p><a href="DigitalMarket.html" class="btn btn-outline-warning aa" >See</a></p>
                 </div>
             </div>
             <div class="hexagon">
