--- a/DigitalMarket.html
+++ b/DigitalMarket.html
@@ -110,7 +110,7 @@
   </div>
 
   <!-- Main Content -->
-  <h1>Digital Marketing</h1>
+  <h1>Social Media Marketing</h1>
   <span>Smart way to grow your brand online and reach the right audience.</span>
 
   <!-- Canva Design Embed -->
