--- a/sitemaps.html
+++ b/sitemaps.html
@@ -3,7 +3,7 @@
   <url>
     <loc>https://www.adwiz.wuaze.com/</loc>
   </url>
-  <url>
+  <!-- <url>
     <loc>https://www.adwiz.wuaze/about.html</loc>
-  </url>
+  </url> -->
 </urlset>
