--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </nav>
         <div class="mobile-nav">
-            <a href="#home">Home</a>
+            <a href="#home">jflsdjfsdk~Home</a>
             <a href="#features">About</a>
             <a href="#service">Services</a>
             <a href="#showcase">Projects</a>
