--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="carousel-item active">
         <section class="hero" >
           <div class="hero-content">
-            <div class="hero-subtitle">Welcome to here  the Future---</div>
+            <div class="hero-subtitle">Welcome to the Future---</div>
             <h1>Presence with Adwiz Digital</h1>
             <div class="hero-description">
               <p>Adwiz Digital provides comprehensive digital marketing services to <br> various industries, including hospitals, real estate, and restaurants. <br>
